syntax = "proto3";

package reference;

option go_package = "github.com/openanolis/trustee/gateway/internal/rvps/protos";

message ReferenceValueQueryRequest {}

message ReferenceValueQueryResponse {
    string reference_value_results = 1;
}

message ReferenceValueRegisterRequest {
    string message = 1;
}

message ReferenceValueRegisterResponse {}

message ReferenceValueDeleteRequest {
    string name = 1;
}

message ReferenceValueDeleteResponse {}

service ReferenceValueProviderService {
    rpc QueryReferenceValue(ReferenceValueQueryRequest) returns (ReferenceValueQueryResponse) {};
    rpc RegisterReferenceValue(ReferenceValueRegisterRequest) returns (ReferenceValueRegisterResponse) {};
    rpc DeleteReferenceValue(ReferenceValueDeleteRequest) returns (ReferenceValueDeleteResponse) {};
}
